# pubsubpy

./: Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
pubsub/: __init__.py  pub.py  publish.py  sub.py  subscribe.py
tests/: kombu_mock.py  pubsub.py  test_pubsub.py
