[tool.poetry]
name = "pubsubpy"
version = "2.3.0"
description = "Client library for an AMQP-based pubsub."
authors = ["John Sloboda <sloboda@makespace.com>"]
license = "MIT"
packages = [
    { include = "pubsub" }
]

[tool.poetry.dependencies]
python = "^3.7"
future = "0.16.0"
kombu = "4.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
isort = "^5.8.0"
yapf = "^0.31.0"
pytest = "^6.2.3"
mock = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
